Added User Endpoint

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "MongoDB": {
-    "ConnectionURI": "mongodb://rootuser:rootpass@localhost:27018/?authMechanism=DEFAULT&authSource=admin",
+    "ConectionURI": "mongodb://rootuser:rootpass@localhost:27018/FFXI-Tools?authSource=admin",
     "DatabaseName": "FFXI-Tools",
     "CollectionName": "users"
   }
