Added Item Service

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,6 @@
   "AllowedHosts": "*",
   "MongoDB": {
     "ConectionURI": "mongodb://rootuser:rootpass@localhost:27018/FFXI-Tools?authSource=admin",
-    "DatabaseName": "FFXI-Tools",
-    "CollectionName": "users"
+    "DatabaseName": "FFXI-Tools"
   }
 }
